Correction et mise en place du vecteur dans toutes les fonctions